Implement validation of numeric values in json.